--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Customjs css file -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -46,7 +46,7 @@
         <a href="#contact" class="btn">Contact Us</a>
       </div>
       <div class="image">
-        <img src="images/Learning languages-cuate.svg" alt="">
+        <img src="./images/Learning languages-cuate.svg" alt="">
       </div>
     </div>
   </section>
@@ -99,7 +99,7 @@
   <section class="about" id="about">
     <div class="row">
       <div class="image">
-        <img src="images/second.webp" alt="">
+        <img src="./images/second.webp" alt="">
       </div>
       <div class="content">
         <h3>Why choose us?</h3>
@@ -444,7 +444,7 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@8.4.7/swiper-bundle.min.js"></script>
 
   <!-- Customjs js file -->
-  <script src="script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
